# minighost

./: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
maint/: code-cleanup.sh
ref/: MG_BC.ORIG.F90  Makefile  Makefile.am  default-settings.h  main.c
src/: Makefile  Makefile.am  Makefile.in  main.c  mg.h  mg_comm.c  mg_flux.c  mg_grid.c  mg_init.c  mg_kernel.c  mg_pack_unpack.c  mg_stencil.c  mg_thread_argobots.c  mg_thread_pthread.c  mg_tp.h  mg_traverse.h  mg_util.c  mg_validate.c  minighost
src/.deps/: minighost-main.Po  minighost-mg_bc.Po  minighost-mg_bex.Po  minighost-mg_bex_SR.Po  minighost-mg_bex_SiR.Po  minighost-mg_bex_diags_SR.Po  minighost-mg_bex_diags_SiR.Po  minighost-mg_bex_diags_iSR.Po  minighost-mg_bex_diags_iSiR.Po  minighost-mg_bex_iSR.Po  minighost-mg_bex_iSiR.Po  minighost-mg_block_def_comm_first_rand.Po  minighost-mg_block_def_random.Po  minighost-mg_block_init.Po  minighost-mg_comm_utils.Po  minighost-mg_fake_work.Po  minighost-mg_flux_accumulate.Po  minighost-mg_flux_accumulate_2d5pt3d7pt.Po  minighost-mg_flux_accumulate_2d9pt.Po  minighost-mg_flux_accumulate_3d27pt.Po  minighost-mg_grid_utils.Po  minighost-mg_profiling.Po  minighost-mg_spikes.Po  minighost-mg_stencils.Po  minighost-mg_sum_grid.Po  minighost-mg_utils.Po
