bin_PROGRAMS = miniGhost.x
# need to do conditional compilation here
#FC=mpifort
miniGhost_x_SOURCES = main.c  MG_CONSTANTS.F90 MG_OPTIONS.F90 MG_UTILS.F90 MG_CHECKPOINT_MPIIO.F90 MG_CHECKPOINT.F90 MG_BUFINIT.F90 MG_ENV.F90 MG_PROFILING.F90 MG_FLUX_ACCUMULATE.F90 MG_FLUX_ACCUMULATE_3D27PT.PRINTS.F90 MG_BC.ORIG.F90 MG_STENCIL_COMPS.F90 MG_STENCIL.F90   MG_IRECV.F90 MG_PACK.F90 MG_GET_FACE.F90 MG_UNPACK_BSPMA.F90 MG_SEND_BSPMA.F90 MG_BSPMA_DIAGS.F90 MG_BSPMA.F90 MG_SUM_GRID.F90 DRIVER_BSPMA.F90 MG_SEND_SVAF.F90 MG_UNPACK_SVAF.F90 MG_SVAF.F90 MG_SVAF_DIAGS.F90 DRIVER_SVAF.F90  DRIVER.F90
#miniGhost_x_LDFLAGS = -lmpi
miniGhost_x_CFLAGS = -D_MG_SERIAL -D_MG_INT4 -D_MG_REAL4  -Df2c_
miniGhost_x_FCFLAGS = -D_MG_SERIAL -D_MG_INT4 -D_MG_REAL4 -nofor-main
